# m4ri

./: .clang-format  .gitignore  .hgignore  .hgtags  AUTHORS  Makefile.am  Makefile.in  README  README.md  autogen.sh  autogen_versions  bitbucket-pipelines.yml  configure.ac  configure.in  further.md  m4ri.pc.in  m4ri.sln  m4ri.vcproj  m4ri.vcxproj
.github/workflows/: ci-sage.yml  distcheck.yml  release.yml
bench/: Makefile.am  bench_elimination.c  bench_elimination_sparse.c  bench_invert.c  bench_m4rm.c  bench_multiplication.c  bench_mzd.c  bench_ple.c  bench_rank.c  bench_trsm.c  benchmarking.c  benchmarking.h
bench/cpucycles-20060326/: compile
m4/: ax_cache_size.m4  ax_cache_size_tune.m4  ax_check_compiler_flags.m4  ax_count_cpus.m4  ax_cpu_vendor.m4  ax_ext.m4  ax_find_lib.m4  ax_func_posix_memalign.m4  ax_gcc_x86_cpuid.m4  ax_guess_path_header.m4  ax_guess_path_lib.m4
m4ri/: Doxyfile  brilliantrussian.c  brilliantrussian.h  config.h.windows  debug_dump.c  debug_dump.h  djb.c  djb.h  doxygen.css  echelonform.c  echelonform.h  foobar.c  graycode.c  graycode.h  io.c  io.h  m4ri.h  m4ri_config.h.in  misc.c  misc.h  mmc.c  mmc.h  mp.c  mp.h  mzd.c  mzd.h  mzp.c  mzp.h  parity.h  ple.c  ple.h  ple_russian.c  ple_russian.h  ple_russian_template.h  solve.c  solve.h  strassen.c  strassen.h  transpose.c  transpose.h  (+6 more)
src/: Doxyfile  brilliantrussian.c  brilliantrussian.h  config.h.in  config.h.windows  debug_dump.c  debug_dump.h  djb.c  djb.h  echelonform.c  echelonform.h  graycode.c  graycode.h  grayflex.c  grayflex.h  io.c  io.h  lqup.c  lqup.h  m4ri.h  m4ri_config.h.in  matrix.c  matrix.h  misc.c  misc.h  mmc.c  mmc.h  mp.c  mp.h  mzd.c  mzd.h  mzp.c  mzp.h  packedmatrix.c  packedmatrix.h  parity.h  permutation.c  permutation.h  ple.c  ple.h  (+24 more)
src/testsuite/: Makefile  test_multiplication.c  test_reduction.c
tests/: Makefile.am  Makefile.in  bench_elimination.c  bench_invert.c  test_alignment.c  test_colswap.c  test_djb.c  test_elimination.c  test_invert.c  test_kernel.c  test_misc.c  test_multiplication.c  test_ple.c  test_pluq.c  test_random.c  test_smallops.c  test_solve.c  test_transpose.c  test_trsm.c  testing.c  testing.h
testsuite/: Makefile  Makefile.in  bench_addition.c  bench_elimination.c  bench_elimination_sparse.c  bench_invert.c  bench_lqup.c  bench_multiplication.c  bench_mzd.c  bench_packedmatrix.c  bench_ple.c  bench_pluq.c  bench_rank.c  bench_reduction.c  bench_smallops.c  bench_trsm.c  bench_trsm_lowerleft.c  bench_trsm_lowerright.c  bench_trsm_upperleft.c  bench_trsm_upperright.c  benchmarketing.c  benchmarketing.h  benchmarking.c  benchmarking.h  run_bench.py  test_colswap.c  test_elimination.c  test_invert.c  test_kernel.c  test_lqup.c  test_misc.c  test_multiplication.c  test_ple.c  test_pluq.c  test_random.c  test_reduction.c  test_smallops.c  test_solve.c  test_transpose.c  test_trsm.c  (+3 more)
testsuite/cpucycles-20060326/: do  do.notes  powerpcaix.c  powerpclinux.c  powerpcmacos.c  test.c
